Column headings are aligned with content by including a column in the row that is in the top most column. Changed the container to fluid because I don't want text to go to another line cause that's ugly. Fixed the separation of scss files, but kind of basically ruining the asset pipeline for stylesheets(??). Now you have to fix the indexes of the other models, courses, cohorts, and students

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,17 +10,11 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
-
+ *
  */
  @import "bootstrap";
- @import "cohorts";
- @import "courses";
- @import "pages";
- @import "sessions";
- @import "users";
 
- html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
+
+
+
+ 
