--- a/app/assets/stylesheets/user_index.scss
+++ b/app/assets/stylesheets/user_index.scss
@@ -1,7 +1,10 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+/*
+*/
 
-.container, .row {
-  height: 100%;
+.index-row {
+    padding-left: 15px;
 }
+
